CREACION BASE DE DATOS

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,320 +8,9 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-
-    <ScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/RecyclerBtnPreg"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <Button
-                android:id="@+id/btnPreg1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5sp"
-                android:backgroundTint="@color/purple_210"
-                android:hapticFeedbackEnabled="false"
-                android:text="@string/btnPreg1"
-                android:textAlignment="textStart"
-                android:textAllCaps="false"
-                android:textColor="#000000"
-                tools:ignore="TextContrastCheck" />
-
-            <Button
-                android:id="@+id/btnPreg2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_210"
-                android:text="@string/btnPreg2"
-                android:textAlignment="textStart"
-                android:textAllCaps="false"
-                android:textColor="#000000"
-                tools:ignore="TextContrastCheck" />
-
-            <Button
-                android:id="@+id/btnPreg3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_210"
-                android:text="@string/btnPreg3"
-                android:textAlignment="textStart"
-                android:textAllCaps="false"
-                android:textColor="#000000"
-                tools:ignore="TextContrastCheck,TextContrastCheck" />
-
-            <Button
-                android:id="@+id/btnPreg4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_210"
-                android:text="@string/btnPreg4"
-                android:textAlignment="textStart"
-                android:textAllCaps="false"
-                android:textColor="#000000"
-                tools:ignore="TextContrastCheck" />
-
-            <Button
-                android:id="@+id/btnPreg5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_210"
-                android:text="@string/btnPreg5"
-                android:textAlignment="textStart"
-                android:textAllCaps="false"
-                android:textColor="#000000"
-                tools:ignore="TextContrastCheck" />
-
-            <Button
-                android:id="@+id/btnPreg6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_210"
-                android:text="@string/btnPreg6"
-                android:textAlignment="textStart"
-                android:textAllCaps="false"
-                android:textColor="#000000"
-                tools:ignore="TextContrastCheck" />
-
-            <Button
-                android:id="@+id/btnPreg7"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_210"
-                android:text="@string/btnPreg7"
-                android:textAlignment="textStart"
-                android:textAllCaps="false"
-                android:textColor="#000000"
-                tools:ignore="TextContrastCheck" />
-
-            <Button
-                android:id="@+id/btnPreg8"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_210"
-                android:text="@string/btnPreg8"
-                android:textAlignment="textStart"
-                android:textAllCaps="false"
-                android:textColor="#000000"
-                tools:ignore="TextContrastCheck" />
-
-            <Button
-                android:id="@+id/btnPreg9"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_210"
-                android:text="@string/btnPreg9"
-                android:textAlignment="textStart"
-                android:textAllCaps="false"
-                android:textColor="#000000"
-                tools:ignore="TextContrastCheck" />
-
-            <Button
-                android:id="@+id/btnPreg10"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="30sp"
-                android:backgroundTint="@color/purple_210"
-                android:text="@string/btnPreg10"
-                android:textAlignment="textStart"
-                android:textAllCaps="false"
-                android:textColor="#000000"
-                tools:ignore="TextContrastCheck" />
-
-            <Button
-                android:id="@+id/btnPreg11"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_500"
-                android:text="@string/btnPreg11"
-                android:textAlignment="textStart"
-                android:textAllCaps="false" />
-
-            <Button
-                android:id="@+id/btnPreg12"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_500"
-                android:text="@string/btnPreg12"
-                android:textAlignment="textStart"
-                android:textAllCaps="false" />
-
-            <Button
-                android:id="@+id/btnPreg13"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_500"
-                android:text="@string/btnPreg13"
-                android:textAlignment="textStart"
-                android:textAllCaps="false" />
-
-            <Button
-                android:id="@+id/btnPreg14"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_500"
-                android:text="@string/btnPreg14"
-                android:textAlignment="textStart"
-                android:textAllCaps="false" />
-
-            <Button
-                android:id="@+id/btnPreg15"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_500"
-                android:text="@string/btnPreg15"
-                android:textAlignment="textStart"
-                android:textAllCaps="false" />
-
-            <Button
-                android:id="@+id/btnPreg16"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_500"
-                android:text="@string/btnPreg16"
-                android:textAlignment="textStart"
-                android:textAllCaps="false" />
-
-            <Button
-                android:id="@+id/btnPreg17"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_500"
-                android:text="@string/btnPreg17"
-                android:textAlignment="textStart"
-                android:textAllCaps="false" />
-
-            <Button
-                android:id="@+id/btnPreg18"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_500"
-                android:text="@string/btnPreg18"
-                android:textAlignment="textStart"
-                android:textAllCaps="false" />
-
-            <Button
-                android:id="@+id/btnPreg19"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_500"
-                android:text="@string/btnPreg19"
-                android:textAlignment="textStart"
-                android:textAllCaps="false" />
-
-            <Button
-                android:id="@+id/btnPreg20"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="30sp"
-                android:backgroundTint="@color/purple_500"
-                android:text="@string/btnPreg20"
-                android:textAlignment="textStart"
-                android:textAllCaps="false" />
-
-            <Button
-                android:id="@+id/btnPreg21"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_700"
-                android:text="@string/btnPreg21"
-                android:textAlignment="textStart"
-                android:textAllCaps="false" />
-
-            <Button
-                android:id="@+id/btnPreg22"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_700"
-                android:text="@string/btnPreg22"
-                android:textAlignment="textStart"
-                android:textAllCaps="false" />
-
-            <Button
-                android:id="@+id/btnPreg23"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_700"
-                android:text="@string/btnPreg23"
-                android:textAlignment="textStart"
-                android:textAllCaps="false" />
-
-            <Button
-                android:id="@+id/btnPreg24"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_700"
-                android:text="@string/btnPreg24"
-                android:textAlignment="textStart"
-                android:textAllCaps="false" />
-
-            <Button
-                android:id="@+id/btnPreg25"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_700"
-                android:text="@string/btnPreg25"
-                android:textAlignment="textStart"
-                android:textAllCaps="false" />
-
-            <Button
-                android:id="@+id/btnPreg26"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_700"
-                android:text="@string/btnPreg26"
-                android:textAlignment="textStart"
-                android:textAllCaps="false" />
-
-            <Button
-                android:id="@+id/btnPreg27"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_700"
-                android:text="@string/btnPreg27"
-                android:textAlignment="textStart"
-                android:textAllCaps="false" />
-
-            <Button
-                android:id="@+id/btnPreg28"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_700"
-                android:text="@string/btnPreg28"
-                android:textAlignment="textStart"
-                android:textAllCaps="false" />
-
-            <Button
-                android:id="@+id/btnPreg29"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_700"
-                android:text="@string/btnPreg29"
-                android:textAlignment="textStart"
-                android:textAllCaps="false" />
-
-            <Button
-                android:id="@+id/btnPreg30"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5sp"
-                android:backgroundTint="@color/purple_700"
-                android:text="@string/btnPreg30"
-                android:textAlignment="textStart"
-                android:textAllCaps="false" />
-
-            <Button
-                android:id="@+id/btnPedirResultado"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/PedirResultado"
-                android:textAllCaps="true"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-    </ScrollView>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
