--- a/app/src/main/res/layout/item_preguntas.xml
+++ b/app/src/main/res/layout/item_preguntas.xml
@@ -1,20 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_pregunta"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Pregunta Nro xx"
-        android:textSize="20sp" />
+    <LinearLayout
+        android:id="@+id/LinearRec"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tv_puntaje"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Puntos Obtenidos: 000"
-        android:textSize="14sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_preguntaRe"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Pregunta Nro xx"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/tv_puntajeRe"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Puntos Obtenidos: 000"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/imResultadoRe"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:alpha="1"
+            android:background="@color/rojo"
+            android:contentDescription="@string/app_name"
+            app:srcCompat="@drawable/_tres_removebg_preview__2_" />
+
+    </LinearLayout>
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="11sp"
+        android:background="@color/gris" />
 </androidx.appcompat.widget.LinearLayoutCompat>
