--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="verde">#30971E</color>
     <color name="rojo">#A60404</color>
+    <color name="gris">#646464</color>
 </resources>
