--- a/app/src/main/res/layout/item_preguntas.xml
+++ b/app/src/main/res/layout/item_preguntas.xml
@@ -13,6 +13,7 @@
         android:orientation="horizontal">
 
         <LinearLayout
+            android:id="@+id/layoutVrec"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -20,18 +21,17 @@
 
             <TextView
                 android:id="@+id/tv_preguntaRe"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:drawableTintMode="add"
                 android:text="Pregunta Nro xx"
-                android:textColor="@color/black"
                 android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/tv_puntajeRe"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Puntos Obtenidos: 000"
-                android:textColor="@color/black"
                 android:textSize="14sp" />
 
         </LinearLayout>
@@ -42,9 +42,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:alpha="1"
-            android:background="@color/rojo"
-            android:contentDescription="@string/app_name"
-            app:srcCompat="@drawable/_tres_removebg_preview__2_" />
+            android:contentDescription="@string/app_name" />
 
     </LinearLayout>
 
