Completado actividad de "Verdadero Falso" arreglo menor de bugs
Sigue:
armar actividades de Opciones de imagenes
pantalla con carta inicio
sistema de codigos para habilitar las preguntas
actividad del resultado final

cambios finales
mejorar el recycler principal

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFF</color>
     <color name="verde">#30971E</color>
+    <color name="verde_oscuro_Verdadero">#183E1A</color>
     <color name="rojo">#A60404</color>
+    <color name="rojo_oscuro_Falso">#530C0C</color>
     <color name="gris">#646464</color>
 
 </resources>
