--- a/app/src/main/res/layout/activity_pregunta_verdadero_falso.xml
+++ b/app/src/main/res/layout/activity_pregunta_verdadero_falso.xml
@@ -4,16 +4,68 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/lila_claro"
     tools:context=".ActivityPreguntaVerdaderoFalso">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10sp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="10dp">
+
+        <TextView
+            android:id="@+id/tvPreg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20sp"
+            android:text="@string/PreguntaDePrueba"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="34sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="150sp"
+            android:layout_marginBottom="70sp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnTrue"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="OnClickTrue"
+                android:text="@string/Verdadero" />
+
+            <Space
+                android:layout_width="10sp"
+                android:layout_height="match_parent" />
+
+            <Button
+                android:id="@+id/btn_false"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="OnClickFalse"
+                android:text="@string/Falso" />
+        </LinearLayout>
+    </LinearLayout>
+
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tv_TiempoVF"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="verdadeo o falso"
-        android:textSize="34sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:text="@string/tiempo_restante"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
