--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
                 android:id="@+id/btn_pedirResultado"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="OnClickCargarResultado"
                 android:text="@string/PedirResultado" />
         </LinearLayout>
     </ScrollView>
