--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,16 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <Button
+        android:id="@+id/btn_IrCodigo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="IrCodigo"
+        android:text="Nuevo Codigo" />
+
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,6 +37,7 @@
                 android:layout_height="wrap_content"
                 android:onClick="OnClickCargarResultado"
                 android:text="@string/PedirResultado" />
+
         </LinearLayout>
     </ScrollView>
 
