Correccion de imagenes dar por finalizado la construccion
Sigue:

Cambios Finales previos al release:
Cargar preguntas
Chequear orden de preguntas
Dar Direccion de las Imegenes con preguntas
Chequear Toast

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,8 @@
     <color name="rojo_oscuro_Falso">#530C0C</color>
     <color name="gris">#646464</color>
 
+    <color name="lilaP1">#D8BBFC</color>
+    <color name="lilaP2">#AF6EFF</color>
+    <color name="lilaP3">#C5AAE6</color>
+
 </resources>
