--- a/app/src/main/res/layout/activity_formulario_para_resultado.xml
+++ b/app/src/main/res/layout/activity_formulario_para_resultado.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10sp"
             android:background="#A1CFBCFD"
-            android:text="Felicitaciones por completar todas las preguntas "
+            android:text="¡ ¡ ¡ Felicitaciones por completar todas las preguntas ! ! !"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10sp"
             android:background="#A1CFBCFD"
-            android:text="Acumulaste xxx puntos"
+            android:text="Acumulaste: xxx puntos"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -96,7 +96,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:onClick="OnClickEspecial"
-        android:text="Codigo Especial"
+        android:text="Código Especial"
         android:textAllCaps="false"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -121,7 +121,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="¡ ¡ ¡ ¡ EXELENTE! ! ! ! Ganaste xxx puntos extra"
+        android:text="¡ ¡ ¡ ¡ EXCELENTE! ! ! ! Ganaste xxx puntos extra"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:visibility="visible"
