--- a/app/src/main/res/layout/activity_carta_presentacion_ingreso_codigo.xml
+++ b/app/src/main/res/layout/activity_carta_presentacion_ingreso_codigo.xml
@@ -10,6 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -47,7 +48,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="OnClick"
-                android:text="Chequear Codigo"
+                android:text="Chequear Código"
                 android:textSize="20sp" />
         </LinearLayout>
     </ScrollView>
