--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="IrCodigo"
-            android:text="Nuevo Codigo" />
+            android:text="Nuevo Código" />
 
         <ScrollView
             android:layout_width="match_parent"
